# AI-Quadruped-Robot-For-Agriculture

./: README.md  arm_and_spray.py  gyro_visualization.py  spatial_mobilenet.py  spatial_mobilenet_custom.py
Arm 3D print stl files/: Arm 1.stl  Arm 1B.stl  Base Motor Support.stl  Cover_TOP.stl  Forward Arm A.stl  Forward Arm B.stl  Front_Inner_Shoulder.stl  Head A.stl  Head B.stl  Head C.stl  Rotating Base.stl
src/docs/: .~lock.servo_calibration_spreadsheet.ods#
src/hector_geotiff/devel/.private/catkin_tools_prebuild/: .catkin
src/hector_geotiff/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
src/hector_geotiff/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
src/hector_slam_launch/: CMakeLists.txt
src/ros-i2cpwmboard/: CMakeLists.txt
src/ros-i2cpwmboard/launch/: i2cpwm_node.launch
src/ros-i2cpwmboard/src/: i2cpwm_controller.cpp
src/spot_micro_keyboard_command/scripts/: spotMicroKeyboardMove.py
src/spot_micro_motion_cmd/config/: spot_micro_motion_cmd.yaml  spot_micro_motion_cmd_backup.yaml
src/spot_micro_motion_cmd/libs/spot_micro_kinematics_cpp/include/spot_micro_kinematics/: spot_micro_kinematics.h  spot_micro_leg.h  utils.h
src/spot_micro_motion_cmd/libs/spot_micro_kinematics_cpp/src/: spot_micro_kinematics.cpp  spot_micro_leg.cpp  utils.cpp
src/spot_micro_motion_cmd/libs/spot_micro_kinematics_cpp/tests/: test_spot_micro_leg.cpp  test_utils.cpp
src/spot_micro_rviz/launch/: show_model.launch
src/spot_micro_rviz/rviz/: spot_micro.rviz
